--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.8.1
 Django==5.0.7
 django-cors-headers==4.4.0
+gunicorn==22.0.0
+packaging==24.1
 pillow==10.4.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
-gunicorn==21.2.0
