--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ django-cors-headers==4.4.0
 gunicorn==22.0.0
 packaging==24.1
 pillow==10.4.0
+psycopg2==2.9.9
 sqlparse==0.5.1
 typing_extensions==4.12.2
